CIV-7380 CivilDocumentStitchingService: unit-tests